--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
       - name: Build
+        env:
+          NEXT_PUBLIC_SUPABASE_URL: "$NEXT_PUBLIC_SUPABASE_URL"
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: "$NEXT_PUBLIC_SUPABASE_ANON_KEY"
         run: npm run build
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
