--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
     "eslint": "^9",
     "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "postcss": "^8",
