--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "type-check": "tsc --noEmit",
     "prepare": "husky",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -33,6 +36,7 @@
     "cmdk": "^1.0.0",
     "countries-list": "^3.1.1",
     "currency-codes": "^2.2.0",
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.13.3",
     "lucide-react": "^0.469.0",
     "next": "^15.0.4",
@@ -48,6 +52,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@playwright/test": "^1.49.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
